# scitos_3d_mapping

MetaroomXMLParser/: CMakeLists.txt  package.xml  package.xml~
MetaroomXMLParser/include/: simpleXMLparser.h
MetaroomXMLParser/src/: simpleXMLparser.cpp
cloud_merge/: CMakeLists.txt  package.xml
cloud_merge/include/: batch_processor.h  cloud_merge.h  cloud_merge_node.h  fine_mapping.h
cloud_merge/launch/: cloud_merge.launch
cloud_merge/src/: batch_main.cpp  batch_processor.cpp  fine_mapping.cpp
cloud_register/: CMakeLists.txt
cloud_register/include/: cloud_register.h
dynamic_object_retrieval/object_3d_benchmark/include/object_3d_benchmark/: benchmark_visualization.h
dynamic_object_retrieval/object_3d_benchmark/src/: benchmark_visualization.cpp
labelling/: README.md
labelling/QTLabeller/: QTLabeller.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
labelling/semantic_map_labeller/: CMakeLists.txt  package.xml
labelling/semantic_map_labeller/include/: labeller.h
labelling/semantic_map_labeller/scripts/: grabcut.py
labelling/semantic_map_labeller/src/: copy_label_files.cpp  copy_labels.cpp  create_int_images.cpp  create_xml_from_labels.cpp  export_sweeps_and_reduce_int_clouds.cpp  export_waypoint_sweeps.cpp  list_waypoint_sweeps.cpp  pcd_from_label.cpp  rebuild_merged_cloud.cpp  view_labelled_objects.cpp
metaroom_xml_parser/include/metaroom_xml_parser/: load_utilities.h  load_utilities.hpp
metaroom_xml_parser/src/: dynamic_vs_labelled.cpp  load_labelled_data.cpp  simple_summary_parser.cpp
observation_registration/additional_view_registration_server/: package.xml
observation_registration/observation_registration_launcher/: package.xml
observation_registration/observation_registration_server/: package.xml
observation_registration/observation_registration_server/src/: observation_registration_main.cpp
observation_registration/siftgpu/: CMakeLists.txt  package.xml
quasimodo/quasimodo_brain/: CMakeLists.txt  package.xml
quasimodo/quasimodo_brain/src/: AnnotationTool2.cpp  ObjectMerge.cpp  fb_map_node.cpp  fb_node.cpp  make_metaroom_lower_level.cpp  metaroom_additional_view_processing.cpp  modelserver.cpp  mr_segment_dynamic_clusters.cpp  sweep_camera_opt.cpp  synthetic_test.cpp  testmerge.cpp  visualizeDB.cpp
quasimodo/quasimodo_brain/src/CameraOptimizer/: CameraOptimizer.cpp  CameraOptimizer.h
quasimodo/quasimodo_brain/src/ModelDatabase/: ModelDatabase.cpp  ModelDatabase.h
quasimodo/quasimodo_brain/src/ModelStorage/: ModelStorage.cpp  ModelStorage.h  ModelStorageFile.cpp
quasimodo/quasimodo_brain/src/Util/: Util.cpp  Util.h
quasimodo/quasimodo_conversions/: CMakeLists.txt
quasimodo/quasimodo_conversions/scripts/: soma_insert_model_server.py
quasimodo/quasimodo_conversions/srv/: soma_insert_model.srv
quasimodo/quasimodo_models/include/core/: Util.h  superpoint.h
quasimodo/quasimodo_models/include/model/: Model.h
quasimodo/quasimodo_models/include/registration/: MassRegistrationPPR3.h
quasimodo/quasimodo_models/include/weightfunctions/: DistanceWeightFunction2PPR3.h
quasimodo/quasimodo_models/src/core/: RGBDFrame.cpp  Util.cpp  superpoint.cpp
quasimodo/quasimodo_models/src/model/: Model.cpp
quasimodo/quasimodo_models/src/modelupdater/: ModelUpdater.cpp  ModelUpdaterBasicFuse.cpp
quasimodo/quasimodo_models/src/registration/: MassRegistrationPPR3.cpp  RegistrationRandom.cpp
quasimodo/quasimodo_models/src/weightfunctions/: DistanceWeightFunction2.cpp  DistanceWeightFunction2PPR3.cpp
quasimodo/quasimodo_msgs/: CMakeLists.txt
quasimodo/quasimodo_msgs/msg/: fused_world_state_object.msg  model.msg
quasimodo/quasimodo_msgs/srv/: insert_model.srv
quasimodo/quasimodo_object_search/: CMakeLists.txt  package.xml
quasimodo/quasimodo_object_search/launch/: object_search.launch
quasimodo/quasimodo_object_search/scripts/: insert_object_server.py
quasimodo/quasimodo_object_search/src/: image_database_node.cpp  visualize_database_node.cpp
quasimodo/quasimodo_retrieval/: CMakeLists.txt
quasimodo/quasimodo_retrieval/launch/: retrieval.launch
quasimodo/quasimodo_retrieval/src/: quasimodo_filtering_node.cpp  quasimodo_retrieval_node.cpp
quasimodo/retrieval_processing/launch/: processing.launch
quasimodo/retrieval_processing/src/: retrieval_segmentation.cpp
semantic_map/: CMakeLists.txt  package.xml
semantic_map/include/: metaroomXMLparser.h  roomXMLparser.h
semantic_map/include/semantic_map/: occlusion_checker.h  room_utilities.h
semantic_map/src/: batch_main.cpp  load_from_mongo.cpp  remove_top.cpp
strands_sweep_registration/src/: ProblemFrameConnection.cpp  RobotContainer.cpp
(+2 files in other folders)
