<?xml version="1.0"?>
<package>
  <name>semantic_map_labeller</name>
  <version>0.0.0</version>
  <description>semantic_map_labeller</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rares@todo.todo">rares</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>semantic_map</build_depend>
  <build_depend>semantic_map_test</build_depend>
  <build_depend>metaroom_xml_parser</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>semantic_map</run_depend>
  <run_depend>semantic_map_test</run_depend>
  <run_depend>metaroom_xml_parser</run_depend>


</package>
